# Nearest-Neighbors-LSH-Hypercube

./: README.md  README.odt
CommonClasses/: DTW.h  Euclidean.h  Manhattan.h  Utils.h
CommonClasses/Curve/: Curve.cpp  Curve.h
CommonClasses/CurveEntry/: CurveEntry.cpp  CurveEntry.h
CommonClasses/CurveGridInit/: init.cpp  init.h
CommonClasses/CurveToVector/: CurveToVector.cpp  CurveToVector.h
CommonClasses/DataVector/: CMakeLists.txt  DataVector.cpp  DataVector.h
CommonClasses/FileUtils/: FileUtils.cpp  FileUtils.h
CommonClasses/Google_tests/: CMakeLists.txt  DataVectorTest.cpp
CommonClasses/Google_tests/lib/: CMakeLists.txt
CommonClasses/Grid/: Grid.cpp  Grid.h
CommonClasses/HashFunctions/: hManhattan.cpp  hManhattan.h  hashFunctionHyperCube.cpp  hashFunctionHyperCube.h  hashFunctionManhattan.cpp  hashFunctionManhattan.h
CommonClasses/NNFunctions/: NNFunctions.cpp  NNFunctions.h
CommonClasses/NNResult/: NNResult.cpp  NNResult.h
CommonClasses/Point/: Point.h
CurveGridHypercube/: CMakeLists.txt  main.cpp
CurveGridLsh/: CMakeLists.txt  main.cpp
Dataset/Trajectory/: traversal_dataset  traversal_query_dataset
Hypercube/: CMakeLists.txt  hypercubeManhattan.h  main.cpp
Traversals/: CMakeLists.txt  Position.h  Traversals.cpp  Traversals.h  main.cpp
lsh/: CMakeLists.txt  lshManhattan.h  main.cpp
